[metadata]
name = RP1210
version = 0.0.4
keywords = RP1210, CAN, J1939
author = Darius Fieschko
author_email = dfieschko@gmail.com
description = A Python32 implementation of the RP1210C standard.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dfieschko/RP1210
project_urls = 
    Wiki = https://github.com/dfieschko/RP1210/wiki
    Issues = https://github.com/dfieschko/RP1210/issues
    Discussions = https://github.com/dfieschko/RP1210/discussions
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows

[options]
packages = RP1210
